--- a/src/main/webapp/plantilla/plantilla.xhtml
+++ b/src/main/webapp/plantilla/plantilla.xhtml
@@ -17,6 +17,7 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Navbar</a>
+                    <!-- hice un cambio   -->
                 </div>
             </nav>
         </div>
