--- a/src/main/webapp/plantilla/plantilla.xhtml
+++ b/src/main/webapp/plantilla/plantilla.xhtml
@@ -18,6 +18,7 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Navbar</a>
                     <!-- hice un cambio   -->
+                       <!-- Otro Cambio    -->
                 </div>
             </nav>
         </div>
