--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Inicio Juego Gato</title>
+        <title>Juego Gato</title>
         <link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="CSS/Styles.css" rel="stylesheet" type="text/css"/>
     </h:head>
@@ -19,17 +19,17 @@
                         <div class="form-group text-center">
                             <h5>Jugador 1</h5>
                             <span class="ui-float-label">
-                                <p:inputText/>
+                                <p:inputText id="jugador1" value="#{inicioJuego.jugador1}" />
                             </span>
                         </div>
                         <div class="form-group text-center">
                             <h5>Jugador 2</h5>
                             <span class="ui-float-label">
-                                <p:inputText/>
+                                <p:inputText id="jugador2" value="#{inicioJuego.jugador2}" />
                             </span>
                         </div>
                         <div class="form-group text-center">
-                            <p:button value="Iniciar" />
+                            <p:commandButton id="iniciar"  value="iniciar" action="#{inicioJuego.iniciar()}"/>
                         </div>
                     </h:form>
                 </div>
