--- a/src/main/webapp/juego.xhtml
+++ b/src/main/webapp/juego.xhtml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
@@ -15,17 +17,59 @@
                 <section>
                     <h1 class="titulo">Juego del Gato</h1>
                     <br></br>
-                    <div class="game-container"> 
-                        <div data-cell-index="0" class="cell"> </div>
-                        <div data-cell-index="1" class="cell"> </div>
-                        <div data-cell-index="2" class="cell"> </div>
-                        <div data-cell-index="3" class="cell"> </div>
-                        <div data-cell-index="4" class="cell"> </div>
-                        <div data-cell-index="5" class="cell"> </div>
-                        <div data-cell-index="6" class="cell"> </div>
-                        <div data-cell-index="7" class="cell"> </div>
-                        <div data-cell-index="8" class="cell"> </div>
-                    </div>
+                    <h:form>
+                        <div class="game-container"> 
+                            <div data-cell-index="0" id="0" class="cell"> 
+                                <h:commandButton id="position0" styleClass="cell" value="#{gato.position0}" disabled="#{gato.boton0}">
+                                    <p:ajax event="click" id="0"  process="position0" listener="#{gato.pressButton0()}" update="position0"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="1" id="1" class="cell"> 
+                                <h:commandButton id="position1" styleClass="cell" value="#{gato.position1}" disabled="#{gato.boton1}" >
+                                    <p:ajax event="click" id="1" process="position1" listener="#{gato.pressButton1()}" update="position1"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="2" id="2" class="cell"> 
+                                <h:commandButton id="position2" styleClass="cell" value="#{gato.position2}" disabled="#{gato.boton2}">
+                                    <p:ajax event="click" id="2" process="position2" listener="#{gato.pressButton2()}" update="position2"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="3" id="3" class="cell"> 
+                                <h:commandButton id="position3" styleClass="cell" value="#{gato.position3}" disabled="#{gato.boton3}">
+                                    <p:ajax event="click" id="3" process="position3" listener="#{gato.pressButton3()}" update="position3"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="4" id="4" class="cell"> 
+                                <h:commandButton id="position4" styleClass="cell" value="#{gato.position4}" disabled="#{gato.boton4}">
+                                    <p:ajax event="click" id="4" process="position4" listener="#{gato.pressButton4()}" update="position4"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="5" id="5" class="cell"> 
+                                <h:commandButton id="position5" styleClass="cell" value="#{gato.position5}" disabled="#{gato.boton5}">
+                                    <p:ajax event="click" id="5" process="position5" listener="#{gato.pressButton5()}" update="position5"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="6" id="6" class="cell"> 
+                                <h:commandButton id="position6" styleClass="cell" value="#{gato.position6}" disabled="#{gato.boton6}">
+                                    <p:ajax event="click" id="6" process="position6" listener="#{gato.pressButton6()}" update="position6"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="7" id="7" class="cell"> 
+                                <h:commandButton id="position7" styleClass="cell" value="#{gato.position7}" disabled="#{gato.boton7}" >
+                                    <p:ajax event="click" id="7" process="position7" listener="#{gato.pressButton7()}" update="position7"/>
+                                </h:commandButton> 
+                            </div>
+                            <div data-cell-index="8" id="8" class="cell"> 
+                                <h:commandButton id="position8" styleClass="cell" value="#{gato.position8}" disabled="#{gato.boton8}">
+                                    <p:ajax event="click" id="8" process="position8" listener="#{gato.pressButton8()}" update="position8"/>
+                                </h:commandButton> 
+                            </div>
+                           
+                        </div>
+                        <div>
+                            <p:commandButton id="Terminar"  value="Terminar" action="#{gato.terminar()}"/>
+                        </div>
+                    </h:form>
                 </section>
             </ui:define>
 
