--- a/src/main/webapp/plantilla/plantilla.xhtml
+++ b/src/main/webapp/plantilla/plantilla.xhtml
@@ -2,13 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="./CSS/bootstrap.min.css" rel="stylesheet" type="text/css"/>
         <link href="./CSS/Styles.css" rel="stylesheet" type="text/css"/>
-        <title>Facelets Template</title>
+        <title>Juego Gato</title>
+        <f:event type="preRenderView" listener="#{plantillaBean.nombreJugadores()}" />
     </h:head>
 
     <h:body>
@@ -16,9 +18,10 @@
         <div id="top" class="top">
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <!-- hice un cambio   -->
-                       <!-- Otro Cambio    -->
+                    <h:outputLabel value="#{plantillaBean.jugador1}" />
+
+                    <h:outputLabel value="#{plantillaBean.jugador2}"/>
+
                 </div>
             </nav>
         </div>
